--- a/package.json
+++ b/package.json
@@ -36,12 +36,18 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.22",
+    "@types/lodash": "^4.14.177",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "ipfs-http-client": "^54.0.2",
+    "it-all": "^1.0.6",
     "mocha": "^9.1.3",
     "mockttp": "^2.4.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "uint8arrays": "^3.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
