--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "node": ">=14.0.0"
   },
   "peerDependencies": {
-    "mockttp": "^2.4.0"
+    "mockttp": "^3.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.22",
@@ -40,9 +40,11 @@
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "ipfs-http-client": "^54.0.2",
+    "ipfs-utils": "^9.0.5",
     "it-all": "^1.0.6",
     "mocha": "^9.1.3",
-    "mockttp": "^2.4.0",
+    "mockttp": "^3.0.0",
+    "node-abort-controller": "^3.0.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "uint8arrays": "^3.0.0"
