--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "scripts": {
     "build": "tsc",
     "pretest": "npm run build",
-    "test": "mocha -r ts-node/register 'test/**/*.spec.ts'"
+    "test": "npm run test:node && npm run test:browser",
+    "test:node": "mocha -r ts-node/register 'test/**/*.spec.ts'",
+    "test:browser": "karma start",
+    "test:browser:dev": "CONTINUOUS_TEST=true npm run test",
+    "test:browser:debug": "HEADFUL_TEST=true CONTINUOUS_TEST=true npm run test"
   },
   "repository": {
     "type": "git",
@@ -35,13 +39,22 @@
     "mockttp": "^3.0.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@types/chai": "^4.2.22",
     "@types/lodash": "^4.14.177",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
+    "esbuild": "^0.14.38",
     "ipfs-http-client": "^54.0.2",
     "ipfs-utils": "^9.0.5",
     "it-all": "^1.0.6",
+    "karma": "^6.3.19",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-esbuild": "^2.2.4",
+    "karma-mocha": "^2.0.1",
+    "karma-spec-reporter": "^0.0.34",
     "mocha": "^9.1.3",
     "mockttp": "^3.0.0",
     "node-abort-controller": "^3.0.1",
