--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "node": ">=14.0.0"
   },
   "peerDependencies": {
-    "mockttp": "^3.0.0"
+    "mockttp": "^3.1.0"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -56,10 +56,13 @@
     "karma-mocha": "^2.0.1",
     "karma-spec-reporter": "^0.0.34",
     "mocha": "^9.1.3",
-    "mockttp": "^3.0.0",
+    "mockttp": "^3.1.0",
     "node-abort-controller": "^3.0.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "uint8arrays": "^3.0.0"
+  },
+  "dependencies": {
+    "parse-multipart-data": "^1.3.0"
   }
 }
