Allow proxying unmatched requests to a real IPFS node
This requires dropping Node v14 testing, and so implicitly dropping
official support, because IPFS itself doesn't run when running Node <16
which makes testing really really awkward, even though MockIPFS runs
fine in that environment. Since it's unsupported by IPFS though, seems
reasonable to match their requirements. This is a breaking change but
we're still pre-1.0 so that's not such a big deal.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/httptoolkit/mockipfs#readme",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
   "peerDependencies": {
     "mockttp": "^3.1.0"
@@ -47,6 +47,8 @@
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "esbuild": "^0.14.38",
+    "ipfs": "^0.62.3",
+    "ipfs-core-types": "^0.10.3",
     "ipfs-http-client": "^54.0.2",
     "ipfs-utils": "^9.0.5",
     "it-all": "^1.0.6",
