--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
-    "@types/chai": "^4.2.22",
-    "@types/karma": "^6.3.3",
-    "@types/lodash": "^4.14.177",
-    "@types/mocha": "^9.0.0",
+    "@types/chai": "4.2.22",
+    "@types/karma": "6.3.3",
+    "@types/lodash": "4.14.177",
+    "@types/mocha": "9.0.0",
+    "@types/node": "17.0.34",
     "chai": "^4.3.4",
     "esbuild": "^0.14.38",
     "ipfs": "^0.62.3",
@@ -66,7 +67,7 @@
     "mockttp": "^3.1.0",
     "node-abort-controller": "^3.0.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
+    "typescript": "4.6.4",
     "uint8arrays": "^3.0.0"
   },
   "dependencies": {
