--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "karma-spec-reporter": "^0.0.34",
     "mocha": "^9.1.3",
     "mockttp": "^3.1.0",
+    "multiformats": "^9.9.0",
     "node-abort-controller": "^3.0.1",
     "ts-node": "^10.4.0",
     "typedoc": "^0.23.11",
