--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,12 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, v16.16.0, 18.x]
+        node-version: [16.x, 18.x, v18.16, '*']
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -20,7 +20,7 @@ jobs:
       - run: npm test
 
       - name: Deploy docs
-        if: github.ref == 'refs/heads/main' && matrix.node-version == 'v16.16.0'
+        if: github.ref == 'refs/heads/main' && matrix.node-version == 'v18.16.0'
         uses: JamesIves/github-pages-deploy-action@v4.2.2
         with:
           single-commit: true
